stream::or added